--- a/notebooks/TargetList.ipynb
+++ b/notebooks/TargetList.ipynb
@@ -20,14 +20,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "🌐  blue_geo-4.574.1.blue_options-4.85.1, built on 02 October 2024, 19:15:46\n"
+                        "🌐  bluer_geo-5.15.1.bluer_flow-5.16.1.bluer_ai-12.136.1.bluer_objects-6.96.1.bluer_options-5.86.1.torch-2.2.2.Python 3.12.9.Darwin 23.6.0..Jupyter-Notebook,\n",
+                        "built on 23 April 2025, 10:31:16\n"
                     ]
                 }
             ],
@@ -39,7 +40,7 @@
                 "\n",
                 "from bluer_geo.env import BLUE_GEO_WATCH_TARGET_LIST\n",
                 "from bluer_geo.host import signature\n",
-                "from bluer_geo.watch.targets.classes import TargetList\n",
+                "from bluer_geo.watch.targets import TargetList\n",
                 "from bluer_geo.logger import logger\n",
                 "\n",
                 "logger.info(f\"{'.'.join(signature())},\\nbuilt on {string.pretty_date()}\")"
@@ -95,7 +96,7 @@
                 }
             ],
             "source": [
-                "TargetList().targets"
+                "TargetList().list_of_targets"
             ]
         },
         {
@@ -104,27 +105,16 @@
             "metadata": {},
             "outputs": [
                 {
-                    "name": "stdout",
+                    "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "download: s3://kamangir/bolt/blue-geo-target-list-v1/metadata.yaml to ../../../storage/abcli/blue-geo-target-list-v1/metadata.yaml\n"
+                        "⚠️  🌀  bluer-geo-target-list-v1 doesn't exist.\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
-                            "{'burning-man-2024': Target: burning-man-2024 | EarthSearch/sentinel_2_l1c | --datetime 2024-08-18/2024-09-15 | --lat 40.7864 | --lon -119.2065 | --radius 0.01,\n",
-                            " 'chilcotin-river-landslide': Target: chilcotin-river-landslide | copernicus/sentinel_2 | --datetime 2024-07-15/2024-08-24 | --keyword L1C | --lat 51.84718 | --lon -122.790264 | --radius 0.01,\n",
-                            " 'elkhema': Target: elkhema | copernicus/sentinel_2 | --datetime 2022-08-06/ | --lat 49.281209 | --lon -123.13076,\n",
-                            " 'Mount-Etna': Target: Mount-Etna | EarthSearch/sentinel_2_l1c | --datetime 2024-06-15/2024-07-20 | --lat 37.751 | --lon 14.9934 | --radius 0.01,\n",
-                            " 'Fagradalsfjall': Target: Fagradalsfjall | EarthSearch/sentinel_2_l1c | --count 30 | --datetime 2024-06-04/2024-09-04 | --lat 63.9 | --lon -22.2667 | --radius 0.01,\n",
-                            " 'Jasper': Target: Jasper | EarthSearch/sentinel_2_l1c | --count 30 | --datetime 2024-06-22/2024-08-22 | --lat 52.8734 | --lon -118.0814 | --radius 0.01,\n",
-                            " 'Leonardo': Target: Leonardo | SkyFox/Venus | --count 30 | --datetime 2019-12-13/2020-10-28 | --lat 41.81 | --lon 12.255 | --radius 0.01,\n",
-                            " 'Leonardo-test': Target: Leonardo-test | SkyFox/Venus | --count 3 | --datetime 2019-12-13/2020-10-28 | --lat 41.81 | --lon 12.255 | --radius 0.01,\n",
-                            " 'Hurricane-Idalia-2023': Target: Hurricane-Idalia-2023 | EarthSearch/sentinel_2_l1c | --count 30 | --datetime 2023-08-20/2023-09-10 | --lat 29.0 | --lon -83.0 | --radius 0.9,\n",
-                            " 'Chilcotin-test': Target: Chilcotin-test | copernicus/sentinel_2 | --count 2 | --datetime 2024-07-30/2024-08-09 | --lat 51.84718 | --lon -122.790264 | --radius 0.01,\n",
-                            " 'bellingcat-2024-09-27-nagorno-karabakh': Target: bellingcat-2024-09-27-nagorno-karabakh | EarthSearch/sentinel_2_l1c | --count 30 | --datetime 2024-05-01/2024-09-01 | --lat 39.8239 | --lon 46.7612 | --radius 0.01,\n",
-                            " 'bellingcat-2024-09-27-nagorno-karabakh-test': Target: bellingcat-2024-09-27-nagorno-karabakh-test | EarthSearch/sentinel_2_l1c | --count 2 | --datetime 2024-05-01/2024-09-01 | --lat 39.8239 | --lon 46.7612 | --radius 0.01}"
+                            "{}"
                         ]
                     },
                     "execution_count": 5,
@@ -133,7 +123,7 @@
                 }
             ],
             "source": [
-                "TargetList(download=True).targets"
+                "TargetList(download=True).list_of_targets"
             ]
         },
         {
@@ -156,7 +146,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3 (ipykernel)",
+            "display_name": "base",
             "language": "python",
             "name": "python3"
         },
@@ -170,7 +160,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.9.19"
+            "version": "3.12.9"
         },
         "toc": {
             "base_numbering": 1,
