--- a/notebooks/Maxar-Open-Data-v3.ipynb
+++ b/notebooks/Maxar-Open-Data-v3.ipynb
@@ -16,29 +16,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "verbose = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌐  blue_geo-4.934.1.blueflow-4.835.1.abcli-9.464.1.blue_objects-5.236.1.blue_options-4.189.1.torch-2.5.1.Python 3.9.6.Darwin 23.6.0..Jupyter-Notebook,\n",
-      "built on 16 January 2025, 14:24:15\n"
+      "🌐  bluer_geo-5.15.1.bluer_flow-5.16.1.bluer_ai-12.136.1.bluer_objects-6.96.1.bluer_options-5.86.1.torch-2.2.2.Python 3.12.9.Darwin 23.6.0..Jupyter-Notebook,\n",
+      "built on 23 April 2025, 10:28:23\n"
      ]
     }
    ],
    "source": [
-    "from blueflow import notebooks\n",
-    "\n",
-    "import datetime\n",
+    "from bluer_sandbox import notebooks\n",
     "\n",
     "from bluer_options import string\n",
     "from bluer_objects import objects\n",
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +53,7 @@
        " 'Belize-Wildfires-June24',\n",
        " 'Brazil-Flooding-May24',\n",
        " 'Cyclone-Chido-Dec15',\n",
+       " 'Earthquake-Myanmar-March-2025',\n",
        " 'Emilia-Romagna-Italy-flooding-may23',\n",
        " 'Floods-Spain-Oct24',\n",
        " 'Gambia-flooding-8-11-2022',\n",
@@ -107,7 +97,7 @@
        " 'yellowstone-flooding22']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌀  📂 query-2025-01-16-14-24-20-b32reb\n"
+      "🌀  📂 query-2025-04-23-10-28-27-oytn2f\n"
      ]
     }
    ],
@@ -150,23 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌐  🔎 MaxarOpenDataDatacube.query -> query-2025-01-16-14-24-20-b32reb\n",
-      "26it [00:36,  1.08s/it]🌐  11/031311103030/1050010040277300 - 2025-01-10 18:35:09\n",
+      "🌐  🔎 MaxarOpenDataDatacube.query -> query-2025-04-23-10-28-27-oytn2f\n",
+      "35it [00:38,  1.25it/s]🌐  11/031311103030/1050010040277300 - 2025-01-10 18:35:09\n",
       "🌐  11/031311103031/1050010040277300 - 2025-01-10 18:35:09\n",
-      "29it [00:39,  1.36s/it]\n",
+      "40it [00:48,  1.22s/it]\n",
       "🌐  2 item(s).\n",
+      "pyogrio._io Created 2 records\n",
+      "🌀  bluer_geo.file.save.save_geojson: 2X[geometry] row(s) -> /Users/kamangir/storage/abcli/query-2025-04-23-10-28-27-oytn2f/coverage.geojson\n",
       "🌐  2 datacubes(s) found.\n",
       "🌐  🧊 01: datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300\n",
       "🌐  🧊 02: datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103031-1050010040277300\n",
-      "🌀  blue_objects.metadata.post.post[/Users/kamangir/storage/abcli/query-2025-01-16-14-24-20-b32reb/metadata.yaml]: datacube_id\n",
-      "🌀  blue_objects.file.save.save_yaml: datacube_id -> /Users/kamangir/storage/abcli/query-2025-01-16-14-24-20-b32reb/metadata.yaml.\n"
+      "🌀  bluer_objects.metadata.post.post[/Users/kamangir/storage/abcli/query-2025-04-23-10-28-27-oytn2f/metadata.yaml]: datacube_id\n",
+      "🌀  bluer_objects.file.save.save_yaml: datacube_id -> /Users/kamangir/storage/abcli/query-2025-04-23-10-28-27-oytn2f/metadata.yaml.\n"
      ]
     }
    ],
@@ -184,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,23 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌐  blue_geo.catalog.generic.generic.classes.MaxarOpenDataDatacube.ingest(): metadata @ datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300\n",
+      "🌐  bluer_geo.catalog.generic.generic.classes.MaxarOpenDataDatacube.ingest(): metadata @ datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300\n",
       "  0%|          | 0/1 [00:00<?, ?it/s]🌐  ingesting data-mask ...\n",
       "🌐  asset_relative_href= ./1050010040277300-data-mask.gpkg\n",
       "🌐  root href: https://maxar-opendata.s3.amazonaws.com/events/WildFires-LosAngeles-Jan-2025/ard/11/031311103030/2025-01-10\n",
       "🌐  asset_href: https://maxar-opendata.s3.amazonaws.com/events/WildFires-LosAngeles-Jan-2025/ard/11/031311103030/2025-01-10/./1050010040277300-data-mask.gpkg\n",
       "🌐  filename: /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/11-031311103030-1050010040277300-1050010040277300-data-mask.gpkg\n",
       "🌀  ✅ /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/11-031311103030-1050010040277300-1050010040277300-data-mask.gpkg\n",
-      "100%|██████████| 1/1 [00:00<00:00,  9.58it/s]\n",
-      "🌀  blue_objects.metadata.post.post[/Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml]: item_info\n",
-      "🌀  blue_objects.file.save.save_yaml: datacube_id, item_info -> /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml.\n"
+      "100%|██████████| 1/1 [00:00<00:00, 13.48it/s]\n",
+      "🌀  bluer_objects.metadata.post.post[/Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml]: item_info\n",
+      "🌀  bluer_objects.file.save.save_yaml: datacube, item_info -> /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml.\n"
      ]
     }
    ],
@@ -254,37 +246,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "🌀  bluer_objects.host.functions.shell(zip -r \"../datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300.zip\" \".\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ../../../storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml to s3://kamangir/bolt/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml\n"
+      "  adding: 11-031311103030-1050010040277300-1050010040277300-data-mask.gpkg (deflated 95%)\n",
+      "  adding: 11-031311103030-1050010040277300-1050010040277300-visual.png (deflated 2%)\n",
+      "  adding: 11-031311103030-1050010040277300-1050010040277300-visual.tif (deflated 8%)\n",
+      "  adding: metadata.yaml (deflated 71%)\n",
+      "  adding: item.bin (deflated 57%)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌀  ⏺️  datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300 | 00014\n",
+      "🌀  WebDAVzipInterface.upload datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300\n",
+      "🌀  ⏺️  datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300 | 00001\n",
       "🌀  ⬆️  /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/11-031311103030-1050010040277300-1050010040277300-visual.png\n",
-      "🌀  ⬆️  /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300-00014 at: https://dbc-3ac1d106-bf0c.cloud.databricks.com/ml/experiments/3846774623941650/runs/aa6509d3655748e1879b6d1d35803cb5\n",
-      "🧪 View experiment at: https://dbc-3ac1d106-bf0c.cloud.databricks.com/ml/experiments/3846774623941650\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "🌀  ⬆️  /Users/kamangir/storage/abcli/datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300/metadata.yaml\n",
       "🌀  ⏹️  datacube-maxar_open_data-WildFires-LosAngeles-Jan-2025-11-031311103030-1050010040277300\n"
      ]
     }
@@ -295,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.9"
   },
   "toc": {
    "base_numbering": 1,
